<resources>
    <string name="app_name">ZAccount</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="copyright">Copyright</string>
    <string name="copyrightV">Unless specified, the copyright in the contents of some material on ZAccount(Guide For Opening Zero Balance Saving Account) is taken from google and we have made some changes to material to provide exact logo of banks to users so that they can identify banks. Users are permitted to copy some material for their personal use only. No part of the data is to be republished without the prior written permission of the copyright owner. If you require further information on permitted use, please email us on helpybookapp@gmail.com.</string>
    <string name="howWeUse">What Information do we collect and Use</string>
    <string name="howWeUseV">We do not collect any personal information from users. This app is made offline so there is no database attached to collect information.But whatever information is entered by user that is taken to default messaging app not in our database.</string>
    <string name="privacyPoli">Privacy Policy</string>
    <string name="privacyPoliV">ZAccount PoPo Ltd uses third-party ad networks to serve ads on the site. These companies may use information about your visits to provide advertisements of interest to you. Please visit Facebook Audience Network ad and content network privacy policy for more details regarding the same.</string>
    <string name="Tracking">Tracking</string>
    <string name="TrackingV">We may use third-party Service Providers to monitor and analyze the use of our Service.\n\nFirebase\n\nFirebase is analytics service provided by Google Inc\n\nFirebase is analytics service provided by Google Inc\n\nYou may opt-out of certain Firebase features through your mobile device settings, such as your device advertising settings or by following the instructions provided by Google in their Privacy Policy:https://firebase.google.com/support/privacy/\n\nWe also encourage you to review the Google's policy for safeguarding your data: </string>
    <string name="mayUpdate">We may update our Privacy Policy from time to time. We will notify you of any changes by posting the new Privacy Policy on this page.\nWe will let you know via email and/or a prominent notice on our Service, prior to the change becoming effective and update the "effective date" at the top of this Privacy Policy.\nYou are advised to review this Privacy Policy periodically for any changes. Changes to this Privacy Policy are effective when they are posted on this page.</string>
    <string name="contactUs">Contact Us</string>
    <string name="cocntat">If you have any questions about this Privacy Policy, please contact us:</string>
    <string name="aboutAirtel">Airtel Payment Bank is a digital saving account in which you can do banking in mobile.It is similar as normal bank but its credit limit is less than the normal bank.</string>
    <string name="featureAirtel">1) Interest rates:- 7.25% \n\n2) Minimum balance:- Zero\n\n3) Charges:- There is no charges in IMPS,UPI,NEFT etc\n\n 4) You can withdraw cash in any Airtel Banking Point with some charges.</string>
    <string name="documentsAirtel">1) Aadhar Card \n\n2) PAN Card(Optional) </string>
    <string name="eligiblityAirtel">All customer holding aadhar card with age limit between 18 t0 70yrs </string>
    <string name="aboutDbs">Digi Bank offers a digital  Zero balance digi saving account based on mobile.It is the India\'s first mobile onlt,paperless full bank that fits into your pocket.You can open a account through mobile with Aadhar and PAN card</string>
    <string name="featureDbs">1) Interest rates:- upto 7% \n\n2) Minimum balance:- Zero\n\n3) Charges:-   |-- There is no charges in UPI\n\n  |-- Rs 150 Anually fee for Debit card\n\n |-- Rs 150 for Debit card replacement(Lost,Damaged,Stolen)\n\n |-- Rs 500 for Account closure(within 6 months of opening)\n\n4) ATM Withdrawl:- Unlimited ATM withdrawal. </string>
    <string name="documentsDbs">1) Aadhar Card \n\n2) PAN Card </string>
    <string name="eligiblityDbs">All customer holding aadhar card and Pan card with age limit between 18 t0 70yrs </string>
    <string name="aboutFedbook">Federal Bank offers Selfie, a mobile based SB account opening facility through Fedbook.It is a kind of Zero balance digital saving account by Federal.You can open a account through mobile with Aadhar and PAN card</string>
    <string name="featureFedbook">1) Interest rates:- 4% on daily basis \n\n2) Minimum balance:- Zero\n\n3) Charges:-   |-- There is no charges in UPI\n\n        |-- It provides 4 free NEFT and IMPS transaction below 50,000 per month after that they will charge\n\n        |-- Rs 300 Anually for Debit Card\n\n        |-- There is no charge for Debit card Issuance\n\n 4) ATM Debit card:- You will get a free ViSA EMV International Gold or Rupay Debit card.\n\n5) Cheque book:- You will get a cheque book of 10 leaves per year free of cost. </string>
    <string name="documentsFedbook">1) Aadhar Card \n\n2) PAN Card(Optional) </string>
    <string name="eligiblityFedbook">All customer holding aadhar card with age limit between 18 t0 70yrs </string>
    <string name="aboutKotak">Kotak Mahindra Bank offers a mobile based Zero Balance digital saving account with a virtual debit card for online shopping. You can open a account through mobile with Aadhar and PAN card</string>
    <string name="documentsKotak">1) Aadhar Card \n\n2) PAN Card </string>
    <string name="eligiblityKotak">All customer holding aadhar card and Pan card not having any existing account in Kotak with age limit between 18 t0 70yrs </string>
    <string name="aboutPaytm">Paytm Payment Bank is a digital saving account in which you can do banking in mobile.It is similar as normal bank but its credit limit is only 1 lakh and if you deposit more than 1 lakh then money will deposit in Fixed Deposit.</string>
    <string name="featurePaytm">1) Interest rates:- 4% \n\n2) Minimum balance:- Zero\n\n3) Charges:- There is no charges in IMPS,UPI,NEFT etc\n\n 4) You can withdraw cash through debit card in any ATMs.\n\n5) Offers cashback on Deposits of 25,000 into Paytm Payment Bank and get Rs 250(1 percent) upto 4 times.\n\n6) Offers Phyical as well as Virtual Rupay Debit Card at Rs 120 and Anually Rs 100 </string>
    <string name="eligiblityPaytm">All customer holding aadhar card with age limit between 18 t0 70yrs </string>
    <string name="documentsPaytm">1) Aadhar Card \n\n2) PAN Card(Optional) </string>
    <string name="aboutPocket">Icici Bank offers Zero balance digital saving account .You can open a account through mobile with Aadhar and PAN card</string>
    <string name="featurePocket">1) Interest rates:- Not mentioned yet\n\n2) Minimum balance:- Zero\n\n3) Charges:-   |-- There is no charges in UPI and Internet banking\n\n        |-- It provides 4 free NEFT and IMPS transaction  per month after that they will charge 90 rs for each transaction\n\n        |-- No charge for Debit Card\n\n  4) ATM Debit card:- You will get a free personalised Rupay Debit card.\n\n5) Cheque book:- You will get a cheque book of 15 leaves per year free of cost. </string>
    <string name="documentsPocket">1) Aadhar Card \n\n2) PAN Card </string>
    <string name="eligiblityPocket">All customer holding aadhar card and Pan card with age limit more than 18</string>
    <string name="aboutRbl">Rbl Bank offers a Digital Saving Account-Prime instant paperless saving account.Its fastest, convenient and secured way of account opening online.No need to visit branch.Just need few minutes.You can open a account through mobile with Aadhar and PAN card</string>
    <string name="featureRbl">1) Interest rates:- 6.5% (Applicable on saving balance of above 10 lakhs and upto 5 Crores)\n\n2) Minimum balance:- 5000\n<font color="#FF0000">Convert into zero balance saving account just by doing SIP/Rd of Rs 2000 or more</font>\n\n3) There is no charges in UPI,NEFT,Money Transfer\n\n4) Unlimited ATM Transaction.\n\n5) You will get free Titanium First phyical debit card.\n\n6) Get Cheque Book of 20 leaves every quarter free of cost(cheque book will be issued automatically once you successfully complete your In Person Verification process)\n\n7) Get Internet Banking,Phone Banking, Mobile Banking facility </string>
    <string name="documentsRbl">1) Aadhar Card \n\n2) PAN Card </string>
    <string name="chargeRbl">1) Rs 200 per annum for debit card \n\n2) If Balance maintained is > 50% the 5% of balance shortfall.If Balance maintained is less than 50% then 10% of balance shortfall. Maximum of 500Rs per month\n\n3) Cash Withdrawl at Home Branch is free(Not available for OTP KYC)\n\n4) Cash withdrawl at non home branchis free(Upto 1 lakh withdrawl p.m)\n\n5) Rs 500 for Account Closure(if closed within 6 months)</string>
    <string name="eligiblityRbl">All customer holding aadhar card and Pan card with age limit more than 18</string>
    <string name="rblFaqQ1">I don’t want to keep a minimum balance in the account. How can I do that without attracting any non-maintenance charges?</string>
    <string name="rblFaqA1">It’s simple if you have a Digital Savings Account – Prime. If you do not wish to keep a minimum balance of Rs 5000 in your account, just do an SIP or RD for a minimum amount of Rs 2000. Non-Maintenance fee will not be levied.</string>
    <string name="rblFaqQ2">What type of accounts can be opened online?</string>
    <string name="rblFaqA2">Accounts which can be opened online are Savings Account + Fixed Deposits. Set-up your account by following the simple steps and complete your application online itself.</string>
    <string name="rblFaqQ3">How does the online account opening process work?</string>
    <string name="rblFaqA3">The entire process is simple and requires your Aadhaar and PAN details to start with. An OTP will be sent to your mobile number linked with Aadhaar number for proceeding ahead with the online deposit(s) account opening</string>
    <string name="rblFaqQ4">What if I don’t have my Aadhaar or PAN number?</string>
    <string name="rblFaqA4">Provide your details online and we will connect with you for fixing up appointment with our representative to take the request further</string>
    <string name="rblFaqQ5">How will I get my account details?</string>
    <string name="rblFaqA5">We will be providing your account details on the screen once you submit the entire details. It will be also sent to your email id and will be part of your welcome kit</string>
    <string name="rblFaqQ6">How many accounts can I open with Aadhaar OTP?</string>
    <string name="rblFaqA6">You can open only 1 OTP based account with any bank in India. If you already have OTP based account with any other banks then you cannot open online account with RBL Bank.</string>
    <string name="rblFaqQ7">How can I transfer amount into this account?</string>
    <string name="rblFaqA7">Fund your account immediately through payment gateway option provided on the screen once the account is opened.You can also add your RBL Bank account as a payee for doing NEFT/IMPS transfer through other bank’s digital platform.The funding needs to be done from an account where you are an account holder</string>
    <string name="rblFaqQ8">Can I use my account immediately once it is opened?</string>
</resources>