<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PrivacyPoliciesZ"
    android:orientation="vertical"
    android:background="#ffffff">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
    <ImageView
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:src="@drawable/zpage"
        android:paddingLeft="24dp"
        android:scaleType="centerCrop"
        android:paddingTop="16dp"
        android:layout_marginBottom="8dp"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="ZAccount Privacy Policies"
        android:textAppearance="?android:textAppearanceLarge"
        android:textStyle="bold"
        android:layout_marginLeft="8dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/lay_border"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="32dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/copyright"
            android:textAppearance="?android:textAppearanceLarge"
            android:textStyle="bold"
            android:layout_marginLeft="8dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/copyrightV"
            android:textAppearance="?android:textAppearanceMedium"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/lay_border"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="16dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/howWeUse"
            android:textAppearance="?android:textAppearanceLarge"
            android:textStyle="bold"
            android:layout_marginLeft="8dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/howWeUseV"
            android:textAppearance="?android:textAppearanceMedium"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"/>
    </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@drawable/lay_border"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="16dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/privacyPoli"
                    android:textAppearance="?android:textAppearanceLarge"
                    android:textStyle="bold"
                    android:layout_marginLeft="8dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/privacyPoliV"
                    android:textAppearance="?android:textAppearanceMedium"
                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="8dp"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@drawable/lay_border"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="16dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Tracking"
                    android:textAppearance="?android:textAppearanceLarge"
                    android:textStyle="bold"
                    android:layout_marginLeft="8dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/TrackingV"
                    android:textAppearance="?android:textAppearanceMedium"
                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="8dp"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@drawable/lay_border"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="32dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mayUpdate"
                    android:textAppearance="?android:textAppearanceMedium"

                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="8dp"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@drawable/lay_border"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="48dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/contactUs"
                    android:textAppearance="?android:textAppearanceLarge"
                    android:textStyle="bold"
                    android:layout_marginLeft="8dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cocntat"
                    android:textAppearance="?android:textAppearanceMedium"
                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="8dp"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>